# demo

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  app.py  generate_metrics_report.py
src/templates/: admin.html  index.html
